force-app/main/default/objects/SML__Recurring_Statistics__c/SML__Recurring_Statistics__c.object-meta.xml
<CustomObject>
    <description>To store recurring statistics</description>
    <label>Recurring Statistics</label>
    <nameField>
        <label>Recurring Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>