force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Converse_Campaign__c.field-meta.xml
<CustomField>
    <fullName>SML__Converse_Campaign__c</fullName>
    <label>Converse Campaign</label>
    <referenceTo>SML__Converse_Campaign__c</referenceTo>
    <relationshipLabel>Recurring Statistics</relationshipLabel>
    <relationshipName>Recurring_Statistics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>