force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Credits_Consumed__c.field-meta.xml
<CustomField>
    <fullName>SML__Credits_Consumed__c</fullName>
    <description>Total credits consumed by the campaign</description>
    <label>Credits Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>