force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Delivered__c.field-meta.xml
<CustomField>
    <fullName>SML__Delivered__c</fullName>
    <description>Count of delivered messages by the campaign</description>
    <label>Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>