force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>SML__Executed_Date__c</fullName>
    <label>Executed Date</label>
    <type>DateTime</type>
</CustomField>