force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>SML__Failed_Reason__c</fullName>
    <description>Failed reason of campaign</description>
    <label>Failed Reason</label>
    <type>TextArea</type>
</CustomField>