force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Processed__c.field-meta.xml
<CustomField>
    <fullName>SML__Processed__c</fullName>
    <description>Processed records by the campaign</description>
    <label>Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>