force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Response__c.field-meta.xml
<CustomField>
    <fullName>SML__Response__c</fullName>
    <description>Response count for the campaign</description>
    <label>Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>