force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>SML__Response_Rate__c</fullName>
    <description>Response rate of a campaign</description>
    <label>Response Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>