force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Sent__c.field-meta.xml
<CustomField>
    <fullName>SML__Sent__c</fullName>
    <description>Sent messages by the campaign</description>
    <label>Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>