force-app/main/default/objects/SML__Recurring_Statistics__c/fields/SML__Status__c.field-meta.xml
<CustomField>
    <fullName>SML__Status__c</fullName>
    <description>Status of recurring campaign</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>