force-app/main/default/objects/SML__Recurring_Statistics__c/listViews/SML__All.listView-meta.xml
<ListView>
    <fullName>SML__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>